Parser.output
   0  $accept : %entry% $end

   1  Prog : FunDecs EOF

   2  FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs
   3          |

   4  Type : CHAR
   5       | INT

   6  Decs : Decs1 Dec
   7       |

   8  Decs1 : Decs1 Dec SEMICOLON
   9        |

  10  Dec : Type Sids

  11  Sid : ID
  12      | REF ID

  13  Sids : Sid COMMA Sids
  14       | Sid

  15  Stat : Exp SEMICOLON
  16       | IF LPAR Exp RPAR Stat
  17       | IF LPAR Exp RPAR Stat ELSE Stat
  18       | RETURN Exp SEMICOLON
  19       | LBRACKET Decs1 Stats RBRACKET
  20       | WHILE LPAR Exp RPAR Stat

  21  Stats :
  22        | Stat Stats

  23  Exp : NUM
  24      | CCHAR
  25      | CSTRING
  26      | Lval
  27      | Lval ASSIGN Exp
  28      | Exp PLUS Exp
  29      | Exp MINUS Exp
  30      | Exp LESS Exp
  31      | ID LPAR Exps RPAR
  32      | LPAR Exp RPAR
  33      | Exp EQUAL Exp

  34  Exps :
  35       | Exps1

  36  Exps1 : Exp
  37        | Exp COMMA Exps

  38  Lval : ID
  39       | ID REF
  40       | ID LSBRACKET Exp RSBRACKET

  41  %entry% : '\001' Prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Prog  (41)
	FunDecs : .  (3)

	CHAR  shift 3
	INT  shift 4
	EOF  reduce 3

	Prog  goto 5
	FunDecs  goto 6
	Type  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Type : CHAR .  (4)

	.  reduce 4


state 4
	Type : INT .  (5)

	.  reduce 5


state 5
	%entry% : '\001' Prog .  (41)

	.  reduce 41


state 6
	Prog : FunDecs . EOF  (1)

	EOF  shift 8
	.  error


state 7
	FunDecs : Type . Sid LPAR Decs RPAR Stat FunDecs  (2)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 11


state 8
	Prog : FunDecs EOF .  (1)

	.  reduce 1


state 9
	Sid : ID .  (11)

	.  reduce 11


state 10
	Sid : REF . ID  (12)

	ID  shift 12
	.  error


state 11
	FunDecs : Type Sid . LPAR Decs RPAR Stat FunDecs  (2)

	LPAR  shift 13
	.  error


state 12
	Sid : REF ID .  (12)

	.  reduce 12


state 13
	FunDecs : Type Sid LPAR . Decs RPAR Stat FunDecs  (2)
	Decs : .  (7)
	Decs1 : .  (9)

	CHAR  reduce 9
	INT  reduce 9
	RPAR  reduce 7

	Decs  goto 14
	Decs1  goto 15


state 14
	FunDecs : Type Sid LPAR Decs . RPAR Stat FunDecs  (2)

	RPAR  shift 16
	.  error


state 15
	Decs : Decs1 . Dec  (6)
	Decs1 : Decs1 . Dec SEMICOLON  (8)

	CHAR  shift 3
	INT  shift 4
	.  error

	Type  goto 17
	Dec  goto 18


state 16
	FunDecs : Type Sid LPAR Decs RPAR . Stat FunDecs  (2)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	IF  shift 22
	LBRACKET  shift 23
	LPAR  shift 24
	NUM  shift 25
	RETURN  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 30


state 17
	Dec : Type . Sids  (10)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 31
	Sids  goto 32


state 18
	Decs : Decs1 Dec .  (6)
	Decs1 : Decs1 Dec . SEMICOLON  (8)

	SEMICOLON  shift 33
	RPAR  reduce 6


state 19
	Exp : CCHAR .  (24)

	.  reduce 24


state 20
	Exp : CSTRING .  (25)

	.  reduce 25


state 21
	Exp : ID . LPAR Exps RPAR  (31)
	Lval : ID .  (38)
	Lval : ID . REF  (39)
	Lval : ID . LSBRACKET Exp RSBRACKET  (40)

	LPAR  shift 34
	LSBRACKET  shift 35
	REF  shift 36
	ASSIGN  reduce 38
	COMMA  reduce 38
	EQUAL  reduce 38
	LESS  reduce 38
	MINUS  reduce 38
	PLUS  reduce 38
	RPAR  reduce 38
	RSBRACKET  reduce 38
	SEMICOLON  reduce 38


state 22
	Stat : IF . LPAR Exp RPAR Stat  (16)
	Stat : IF . LPAR Exp RPAR Stat ELSE Stat  (17)

	LPAR  shift 37
	.  error


state 23
	Stat : LBRACKET . Decs1 Stats RBRACKET  (19)
	Decs1 : .  (9)

	.  reduce 9

	Decs1  goto 38


state 24
	Exp : LPAR . Exp RPAR  (32)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 39
	Lval  goto 29


state 25
	Exp : NUM .  (23)

	.  reduce 23


state 26
	Stat : RETURN . Exp SEMICOLON  (18)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 40
	Lval  goto 29


state 27
	Stat : WHILE . LPAR Exp RPAR Stat  (20)

	LPAR  shift 41
	.  error


state 28
	Stat : Exp . SEMICOLON  (15)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	SEMICOLON  shift 46
	.  error


state 29
	Exp : Lval .  (26)
	Exp : Lval . ASSIGN Exp  (27)

	ASSIGN  shift 47
	COMMA  reduce 26
	EQUAL  reduce 26
	LESS  reduce 26
	MINUS  reduce 26
	PLUS  reduce 26
	RPAR  reduce 26
	RSBRACKET  reduce 26
	SEMICOLON  reduce 26


state 30
	FunDecs : Type Sid LPAR Decs RPAR Stat . FunDecs  (2)
	FunDecs : .  (3)

	CHAR  shift 3
	INT  shift 4
	EOF  reduce 3

	FunDecs  goto 48
	Type  goto 7


state 31
	Sids : Sid . COMMA Sids  (13)
	Sids : Sid .  (14)

	COMMA  shift 49
	RPAR  reduce 14
	SEMICOLON  reduce 14


state 32
	Dec : Type Sids .  (10)

	.  reduce 10


state 33
	Decs1 : Decs1 Dec SEMICOLON .  (8)

	.  reduce 8


state 34
	Exp : ID LPAR . Exps RPAR  (31)
	Exps : .  (34)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	RPAR  reduce 34

	Exp  goto 50
	Exps  goto 51
	Exps1  goto 52
	Lval  goto 29


state 35
	Lval : ID LSBRACKET . Exp RSBRACKET  (40)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 53
	Lval  goto 29


state 36
	Lval : ID REF .  (39)

	.  reduce 39


state 37
	Stat : IF LPAR . Exp RPAR Stat  (16)
	Stat : IF LPAR . Exp RPAR Stat ELSE Stat  (17)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 54
	Lval  goto 29


state 38
	Decs1 : Decs1 . Dec SEMICOLON  (8)
	Stat : LBRACKET Decs1 . Stats RBRACKET  (19)
	Stats : .  (21)

	CCHAR  shift 19
	CHAR  shift 3
	CSTRING  shift 20
	ID  shift 21
	IF  shift 22
	INT  shift 4
	LBRACKET  shift 23
	LPAR  shift 24
	NUM  shift 25
	RETURN  shift 26
	WHILE  shift 27
	RBRACKET  reduce 21

	Type  goto 17
	Dec  goto 55
	Exp  goto 28
	Lval  goto 29
	Stat  goto 56
	Stats  goto 57


state 39
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : LPAR Exp . RPAR  (32)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RPAR  shift 58
	.  error


state 40
	Stat : RETURN Exp . SEMICOLON  (18)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	SEMICOLON  shift 59
	.  error


state 41
	Stat : WHILE LPAR . Exp RPAR Stat  (20)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 60
	Lval  goto 29


state 42
	Exp : Exp EQUAL . Exp  (33)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 61
	Lval  goto 29


state 43
	Exp : Exp LESS . Exp  (30)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 62
	Lval  goto 29


state 44
	Exp : Exp MINUS . Exp  (29)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 63
	Lval  goto 29


state 45
	Exp : Exp PLUS . Exp  (28)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 64
	Lval  goto 29


state 46
	Stat : Exp SEMICOLON .  (15)

	.  reduce 15


state 47
	Exp : Lval ASSIGN . Exp  (27)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	.  error

	Exp  goto 65
	Lval  goto 29


state 48
	FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs .  (2)

	.  reduce 2


state 49
	Sids : Sid COMMA . Sids  (13)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 31
	Sids  goto 66


state 50
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)
	Exps1 : Exp .  (36)
	Exps1 : Exp . COMMA Exps  (37)

	COMMA  shift 67
	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RPAR  reduce 36


state 51
	Exp : ID LPAR Exps . RPAR  (31)

	RPAR  shift 68
	.  error


state 52
	Exps : Exps1 .  (35)

	.  reduce 35


state 53
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)
	Lval : ID LSBRACKET Exp . RSBRACKET  (40)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RSBRACKET  shift 69
	.  error


state 54
	Stat : IF LPAR Exp . RPAR Stat  (16)
	Stat : IF LPAR Exp . RPAR Stat ELSE Stat  (17)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RPAR  shift 70
	.  error


state 55
	Decs1 : Decs1 Dec . SEMICOLON  (8)

	SEMICOLON  shift 33
	.  error


state 56
	Stats : Stat . Stats  (22)
	Stats : .  (21)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	IF  shift 22
	LBRACKET  shift 23
	LPAR  shift 24
	NUM  shift 25
	RETURN  shift 26
	WHILE  shift 27
	RBRACKET  reduce 21

	Exp  goto 28
	Lval  goto 29
	Stat  goto 56
	Stats  goto 71


state 57
	Stat : LBRACKET Decs1 Stats . RBRACKET  (19)

	RBRACKET  shift 72
	.  error


state 58
	Exp : LPAR Exp RPAR .  (32)

	.  reduce 32


state 59
	Stat : RETURN Exp SEMICOLON .  (18)

	.  reduce 18


state 60
	Stat : WHILE LPAR Exp . RPAR Stat  (20)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RPAR  shift 73
	.  error


state 61
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)
	Exp : Exp EQUAL Exp .  (33)

	COMMA  reduce 33
	LESS  reduce 33
	MINUS  reduce 33
	PLUS  reduce 33
	RPAR  reduce 33
	RSBRACKET  reduce 33
	SEMICOLON  reduce 33


state 62
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp LESS Exp .  (30)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	MINUS  shift 44
	PLUS  shift 45
	COMMA  reduce 30
	LESS  reduce 30
	RPAR  reduce 30
	RSBRACKET  reduce 30
	SEMICOLON  reduce 30


state 63
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp MINUS Exp .  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	COMMA  reduce 29
	LESS  reduce 29
	MINUS  reduce 29
	PLUS  reduce 29
	RPAR  reduce 29
	RSBRACKET  reduce 29
	SEMICOLON  reduce 29


state 64
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp PLUS Exp .  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	COMMA  reduce 28
	LESS  reduce 28
	MINUS  reduce 28
	PLUS  reduce 28
	RPAR  reduce 28
	RSBRACKET  reduce 28
	SEMICOLON  reduce 28


state 65
	Exp : Lval ASSIGN Exp .  (27)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . LESS Exp  (30)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	COMMA  reduce 27
	RPAR  reduce 27
	RSBRACKET  reduce 27
	SEMICOLON  reduce 27


state 66
	Sids : Sid COMMA Sids .  (13)

	.  reduce 13


state 67
	Exps1 : Exp COMMA . Exps  (37)
	Exps : .  (34)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	LPAR  shift 24
	NUM  shift 25
	RPAR  reduce 34

	Exp  goto 50
	Exps  goto 74
	Exps1  goto 52
	Lval  goto 29


state 68
	Exp : ID LPAR Exps RPAR .  (31)

	.  reduce 31


state 69
	Lval : ID LSBRACKET Exp RSBRACKET .  (40)

	.  reduce 40


state 70
	Stat : IF LPAR Exp RPAR . Stat  (16)
	Stat : IF LPAR Exp RPAR . Stat ELSE Stat  (17)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	IF  shift 22
	LBRACKET  shift 23
	LPAR  shift 24
	NUM  shift 25
	RETURN  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 75


state 71
	Stats : Stat Stats .  (22)

	.  reduce 22


state 72
	Stat : LBRACKET Decs1 Stats RBRACKET .  (19)

	.  reduce 19


state 73
	Stat : WHILE LPAR Exp RPAR . Stat  (20)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	IF  shift 22
	LBRACKET  shift 23
	LPAR  shift 24
	NUM  shift 25
	RETURN  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 76


state 74
	Exps1 : Exp COMMA Exps .  (37)

	.  reduce 37


state 75
	Stat : IF LPAR Exp RPAR Stat .  (16)
	Stat : IF LPAR Exp RPAR Stat . ELSE Stat  (17)

	ELSE  shift 77
	CCHAR  reduce 16
	CHAR  reduce 16
	CSTRING  reduce 16
	EOF  reduce 16
	ID  reduce 16
	IF  reduce 16
	INT  reduce 16
	LBRACKET  reduce 16
	LPAR  reduce 16
	NUM  reduce 16
	RBRACKET  reduce 16
	RETURN  reduce 16
	WHILE  reduce 16


state 76
	Stat : WHILE LPAR Exp RPAR Stat .  (20)

	.  reduce 20


state 77
	Stat : IF LPAR Exp RPAR Stat ELSE . Stat  (17)

	CCHAR  shift 19
	CSTRING  shift 20
	ID  shift 21
	IF  shift 22
	LBRACKET  shift 23
	LPAR  shift 24
	NUM  shift 25
	RETURN  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 78


state 78
	Stat : IF LPAR Exp RPAR Stat ELSE Stat .  (17)

	.  reduce 17


29 terminals, 16 nonterminals
42 grammar rules, 79 states
